--- a/src/styles.less
+++ b/src/styles.less
@@ -2126,3 +2126,6 @@ td .table-sm input, td .table-sm select, td .table-sm{
 		background: rgba(0,0,0,15%) !important;
 		border: none;
 	}
+	.mandatory {
+		color: red;
+	}
