Custom metric -critical/watchlist interchanged in Query table issue fixed

--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -698,11 +698,11 @@
                                  <!-- <td class="px-1"><input type="text" class="form-control" value="" formControlName=""></td> -->
                                  <td class="px-1" style="width:5%">
                                   <div>
-                                    <input type="checkbox" id="query-watchlist" formControlName="watchlist">
+                                    <input type="checkbox" id="query-critical" formControlName="critical">
                                   </div>
                                 </td>
                                  <td class="px-1">
-                                    <input type="checkbox" id="in_selectAll" formControlName="critical">
+                                    <input type="checkbox" id="query-watchlist" formControlName="watchlist">
                                  </td>
                                  <td class="px-1"> 
                                   <input type="text" class="form-control" value="" formControlName="metricWeight">
