--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -209,7 +209,8 @@
                   <span *ngIf="service.logsScore == -1 || service.logsScore === null">- </span>
                  <span *ngIf="service.logsScore != -1 && service.logsScore != null">{{service.logsScore}} </span>
                   </td>
-                <td class="showElementHover" [ngClass]="{'text-danger':service.status == 'Fail' || service.status == 'TERMINAL' || service.status == 'RUNNING','text-success':service.status == 'Pass'|| service.status == 'SUCCEEDED', 'text-warning': service.status == 'Review'}" (click)="getServiceCanaryReport(service.canaryId)">{{service.status}}</td>
+                <td class="showElementHover {{service.canaryId == -1 ? 'disabledLink': ''}}" [ngClass]="{'text-danger':service.status == 'Fail' || service.status == 'TERMINAL' || service.status == 'RUNNING','text-success':service.status == 'Pass'|| service.status == 'SUCCEEDED', 'text-warning': service.status == 'Review'}" (click)="getServiceCanaryReport(service.canaryId)">
+                  <a [routerLink]="['/application/deploymentverification/',selectedApplicationName,service.canaryId,service.serviceId]" >{{service.status}}</a></td>
               </tr>
             </tbody>
           </table>
