--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -545,7 +545,10 @@
                                         </form>
                                       </div> -->
                                       
-                                      <div class="col-12" *ngIf="visibilityForm.value.visibilityConfig.length !== 0 ? true : false ">
+                                      <div class="col-12" *ngIf="gateId && visibilityForm.value.visibilityConfig.length !== 0 ? true : false ">
+                                        <app-connector-template-config [approvalGateId]="gateId"></app-connector-template-config>
+                                      </div>
+                                      <!-- <div class="col-12" *ngIf="visibilityForm.value.visibilityConfig.length !== 0 ? true : false ">
                                         <form [formGroup]="visibilityForm">
                                           <table class="table table-outline" formArrayName="visibilityConfig">
                                             <thead>
@@ -558,7 +561,6 @@
                                             </thead>
                                             <tbody>
                                               <tr *ngFor="let optionsArr of visibilityForm.get('visibilityConfig')['controls'];let i=index" (mouseenter)="toolTypeRowHoverd[i] = true" (mouseleave)="toolTypeRowHoverd[i] = false">
-                                                <!-- <div>Options Array: {{optionsArr.controls.connectorType.value | json}}  and i  =  {{i}}  ToolTypeDataSaved: {{toolTypeDataSaved[i]}} ||| AccountType:    {{accountsForTooltypes[i] | json}}  ||| Template Types: {{templatesForToolType[i] | json}}  </div> -->
                                                 <ng-container [formGroupName]="i">
                                                   <td>
                                                     <select *ngIf="!toolTypeDataSaved[i]" class="form-control" formControlName="connectorType" (change)="onChangeTooltype($event.target.value)">
@@ -567,22 +569,15 @@
                                                           {{tooltype}}</option>
                                                     </select>
                                                     <span *ngIf="toolTypeDataSaved[i]">{{optionsArr.controls.connectorType.value}}</span>
-                                                    <!-- <input type="text" class="form-control" formControlName="connectorType" 
-                                                    [ngClass]="!visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').valid && visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').touched ? 'is-invalid':''">
-                                                    <span *ngIf="!visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').valid && visibilityForm.get('visibilityConfig')['controls'][i].get('connectorType').touched"
-                                                    class="invalid-feedback">connectorType is required</span> -->
                                                   </td>
                                                   <td>                                                    
-                                                    <!-- Account type: {{accountsForTooltypes | json}} -->
                                                     <select class="form-control" formControlName="accountName" (change)="onChangeAccountofTooltype($event.target.value)">
                                                       <option value="" [disabled]="true">Select</option>                                                       
                                                       <option *ngFor="let account of accountsForTooltypes[i]" value="{{account.visibilityToolConnectorId}}" >
                                                           {{account.accountName}}</option>
-                                                    </select>    
-                                                    <!-- <span>{{optionsArr.controls.accountName.value}}</span>                                                 -->
+                                                    </select>
                                                   </td>
                                                   <td>
-                                                    <!-- Template Tool type: {{templatesForToolType | json}} -->
                                                     <div class="d-flex  mr-2 align-items-center position-relative">                                                      
                                                       <select class="form-control template-dropdown" formControlName="templateName" (change)="onChangeTemplateofTooltype($event.target.value, i)">
                                                         <option value="" [disabled]="true">Select</option>                                                       
@@ -606,9 +601,6 @@
                                                         </a>
                                                       </span>
                                                     </div>
-                                                    <!-- <div>
-                                                      <span>{{optionsArr.controls.templateName.value}}</span>  
-                                                    </div> -->
                                                   </td>
                                                   <td class="hover-buttons-td">
                                                     <div class="d-flex  mr-2 align-items-center" *ngIf="toolTypeRowHoverd[i]">
@@ -637,7 +629,7 @@
                                             </tbody>
                                           </table>
                                         </form>
-                                      </div>
+                                      </div> -->
                                       
                                       <!-- <div class="col-6">
                                         <a class="btn btn-link btn-link-black" *ngIf="visibilityForm.value.visibilityConfig.length === 0 ? true : false " (click)="addConnector()">Add Visibility Config</a>
@@ -913,7 +905,7 @@
 
 
 <!-- Modal Matric -->
-<div class="modal bd-example-modal-lg fade" id="newTemplateForTooltype" tabindex="-1" role="dialog" aria-labelledby="newTemplateForTooltypeLabel" aria-hidden="true">
+<!-- <div class="modal bd-example-modal-lg fade" id="newTemplateForTooltype" tabindex="-1" role="dialog" aria-labelledby="newTemplateForTooltypeLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-width template-popup" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -975,4 +967,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
