--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -140,12 +140,17 @@
                   </div>
                   <div class="form-group" >
                     <label>Image Source <i data-toggle="tooltip" data-placement="top" data-original-title="Repository to fetch images for Release Management" class="fa fa-question-circle" aria-hidden="true"></i></label>
-                    <select class="form-control"  formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
+                    <select *ngIf="configuredImage == '' " class="form-control"  formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
                       <option value="">Select</option>
                       <option *ngFor="let imageData of imageSourceData" value="{{imageData.name}}">{{imageData.name}}</option>
-                      <option *ngIf="configuredImage && editMode" value="{{configuredImage}}">{{configuredImage}}</option>
-
+                      <!-- <option *ngIf="configuredImage && editMode" value="{{configuredImage}}">{{configuredImage}}</option> -->
+                    </select>
+                    <select *ngIf="configuredImage" class="form-control"  formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
+                    [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
+                      <option value="">Select</option>
+                      <option  value="{{configuredImage}}">{{configuredImage}}</option>
+                      <!-- <option *ngIf="configuredImage && editMode" value="{{configuredImage}}">{{configuredImage}}</option> -->
                     </select>
                     <span *ngIf="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched"
                       class="invalid-feedback">
