--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -1,10 +1,10 @@
   <div class="pt-1">
     <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
       <li class="nav-item" >
-        <a class="nav-link {{isEditMode ? '':'active'}}" id="logtemplate-form-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-form" aria-selected="true">Log Template</a>
+        <a class="nav-link {{selectedTab != 'logtemplate-form' ? '':'active'}}" id="logtemplate-form-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-form" aria-selected="true">Log Template</a>
       </li>
       <li  class="nav-item">
-        <a class="nav-link {{isEditMode ? 'active':''}}"  id="logtemplate-editor-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-editor" aria-selected="true">Editor</a>
+        <a class="nav-link {{selectedTab != 'logtemplate-form' ? 'active':''}}"  id="logtemplate-editor-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-editor" aria-selected="true">Editor</a>
       </li>
     </ul>
   
