changes related to delete application

--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -480,7 +480,7 @@
               <div class="rightBox m-0 position-sticky">
                 <div class="rightBox_header bg-white d-flex align-items-center">
                   <div class="btns_icon d-flex ml-auto">
-                    <button class="btn p-0" data-toggle="tooltip" data-placement="top" title="Download debug data" (click)="downloadDebugData(canaryId)"><img src="../../../assets/images/download.png" alt="download" /></button>
+                    <!-- <button class="btn p-0" data-toggle="tooltip" data-placement="top" title="Download debug data" (click)="downloadDebugData(canaryId)"><img src="../../../assets/images/download.png" alt="download" /></button> -->
                     <!-- <button class="btn p-0 ml-2" data-toggle="tooltip" data-placement="top" title="Add"><img src="../../../assets/images/plus_icon.png" alt="plus" /></button>
                     <button class="btn p-0 ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><img src="../../../assets/images/edit_icon.png" alt="edit" /></button> -->
                   </div>
