--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -650,7 +650,7 @@
                       </tr>
                       <tr data-toggle="tooltip" data-placement="left" title="Analysis Duration In Minutes">
                         <td >Analysis Duration:</td>
-                        <td>{{deploymentServiceInformation ? deploymentServiceInformation['duration']: 'N/A'}}</td>
+                        <td>{{deploymentServiceInformation ? (deploymentServiceInformation['analysisDuration'] | millisecondsToMins) : 'N/A'}} mins</td>
                       </tr>
                       <tr>
                         <td >Lifetime Hours:</td>
